<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:defaultValue="10"
        android:key="edit_text_preference"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/winteravetrassa" />
    <EditTextPreference
        android:defaultValue="10"
        android:key="edit_text_preference_1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/winteravecity" />
    <EditTextPreference
        android:defaultValue="10"
        android:key="edit_text_preference_2"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/summeravetrassa" />
    <EditTextPreference
        android:defaultValue="10"
        android:key="edit_text_preference_3"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/summeravecity" />
</PreferenceScreen>