<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:label="@string/about"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lifesider.blogspot.com.driverhelper.AboutActivity">

    <LinearLayout
        android:id="@+id/linearvert"
        android:layout_width="312dp"
        android:layout_height="361dp"
        android:layout_marginBottom="132dp"
        android:layout_marginEnd="36dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/textabout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textabout"
            android:textSize="24sp"
            android:textStyle="italic" />
    </LinearLayout>

    <TextView
        android:id="@+id/textRights"
        android:layout_width="273dp"
        android:layout_height="35dp"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="52dp"
        android:text="@string/rights"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>
