<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="287dp"
        android:layout_height="309dp"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/fueltittletext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fuel1"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/efuelout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/fuel"
            android:inputType="numberDecimal"
            android:textAlignment="textStart"
            android:textAllCaps="true"
            android:textSize="30sp" />

        <Button
            android:id="@+id/predf"
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:onClick="onClickPred"
            android:text="@string/lastprob"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:textStyle="italic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="29dp" />

        <EditText
            android:id="@+id/efuelazs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/azs"
            android:inputType="numberDecimal"
            android:textAlignment="textStart"
            android:textAllCaps="true"
            android:textSize="30sp" />

    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="287dp"
        android:layout_height="82dp"
        android:layout_marginBottom="70dp"
        android:layout_marginEnd="148dp"
        android:layout_marginStart="148dp"
        android:onClick="onClick"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>