<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadingEdge="horizontal">

    <LinearLayout
        android:layout_width="210dp"
        android:layout_height="254dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="132dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/probeg"
            android:textSize="24sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intank"
            android:textSize="24sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/avecommon"
            android:textSize="24sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/probcity"
            android:textSize="24sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/probtrassa"
            android:textSize="24sp"
            android:textStyle="italic" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="83dp"
        android:layout_height="255dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="132dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:textAllCaps="true"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:textAllCaps="true"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:textAllCaps="true"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:textAllCaps="true"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:textAllCaps="true"
            android:textSize="24sp" />

    </LinearLayout>

    <Button
        android:id="@+id/summerbutton"
        android:layout_width="145dp"
        android:layout_height="70dp"
        android:layout_marginBottom="81dp"
        android:layout_marginStart="40dp"
        android:background="@android:color/holo_orange_light"
        android:onClick="onClickSummer"
        android:text="@string/summer"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/winterbutton"
        android:layout_width="145dp"
        android:layout_height="70dp"
        android:layout_marginBottom="81dp"
        android:layout_marginEnd="40dp"
        android:background="@android:color/holo_blue_light"
        android:fadingEdge="horizontal"
        android:onClick="OnClickWinter"
        android:text="@string/winter"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:fadingEdgeLength="@android:dimen/notification_large_icon_height" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginEnd="133dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="60dp"
        android:text="@string/in"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>